[package]
name = "funcgraph"
version = "0.1.3"
edition = "2025"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
graphviz-rust = "0.9.5"
rayon = "1.10.0"
tree-sitter = "0.25.8"
tree-sitter-java = "0.23.5"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24"
walkdir = "2.5.0"

[build-dependencies]
cc="*"
